@@ -1,5 +1,6 @@
 package com.northernneckgarbage.nngc.security;
 
+import io.github.cdimascio.dotenv.Dotenv;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
@@ -19,49 +20,71 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.io.IOException;
 import java.util.Arrays;
+import java.util.List;
+
 @Configuration
 @EnableWebSecurity
 @RequiredArgsConstructor
 public class SecurityConfiguration {
+    Dotenv dotenv = Dotenv.load();
 
     private final JwtAuthenticationFilter jwtAuthFilter;
     private final AuthenticationProvider authenticationProvider;
-
+    private final CustomAuthenticationFailureHandler customAuthenticationFailureHandler;
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173", "http://localhost:8080","http://www.northernneckgarbage.com"));
+        final CorsConfiguration configuration = new CorsConfiguration();
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        configuration.setAllowedHeaders(List.of("*"));
+
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource() {
+            @Override
+            public CorsConfiguration getCorsConfiguration(HttpServletRequest request) {
+                String origin = request.getHeader("Origin");
+                if (origin != null) {
+                    if (origin.endsWith(":5173") || origin.endsWith(":8080") || origin.equals("http://www.northernneckgarbage.com")) {
+                        configuration.addAllowedOrigin(origin);
+                    }
+                }
+                return configuration;
+            }
+        };
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
 
-
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                .cors().configurationSource(corsConfigurationSource()) // Apply global CORS configuration
+                .cors().configurationSource(corsConfigurationSource())
                 .and()
                 .csrf().disable()
                 .authorizeRequests(auth -> {
                     auth.anyRequest().permitAll();
                 })
                 .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class)
+                .formLogin()
+                .failureHandler(customAuthenticationFailureHandler)
+                .and()
                 .oauth2Login()
                 .successHandler(new SimpleUrlAuthenticationSuccessHandler() {
                     @Override
                     public void onAuthenticationSuccess(HttpServletRequest request, HttpServletResponse response,
                                                         Authentication authentication) throws IOException {
-                        response.sendRedirect("http://www.northernneckgarbage.com");
+                        response.sendRedirect(isProduction()?"http://www.northernneckgarbage.com":"http://localhost:5173");
                     }
                 })
                 .and()
                 .sessionManagement(sessionManagement -> sessionManagement.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authenticationProvider(authenticationProvider);
+
         return http.build();
     }
 
+    private boolean isProduction() {
+        // Implement your logic to determine if the application is running in production
+        // For example, you can check an environment variable
+        return dotenv.get("ENVIRONMENT").equals("prod") ;
+    }
 
 }
